feat(api): add admin endpiont for triggering evaluation
This allows operators to re-evaluate ad-hoc, assuming an existing evalution is not in progress. There is oppurtunity to support data in the post request if we want to retrigger the evaluation for a specific name vs. all of them.
